test/spec_vectors/global/fail/module_18.wat
(module (global i32 (global.get 1)) (global i32 (i32.const 0)))